[project]
name = "useful_decorators"
authors = [
    {name="ed cuss"},
]
description = ""
readme = "README.md"
requires-python = ">=3.8"
version = "0.0.1"
dependencies = [
    "pyyaml",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "hypothesis",    
]
lint = [
    "pre-commit",
    "ruff",
]
dev = [
    "useful_decorators[test,lint]",
]

[tool.coverage.run]
branch = true
source=["src"]
omit=[
    "constants.py",
]

[tool.coverage.report]
show_missing=true