[project]
name = "useful_decorators"
authors = [
    {name="ed cuss"},
]
description = ""
readme = "README.md"
requires-python = ">=3.8"
version = "0.0.1"
dependencies = [

]

[tool.coverage.run]
branch = true
source=["src"]
omit=[
    "constants.py",
]

[tool.coverage.report]
show_missing=true

[dependency-groups]
dev = [
    "pre-commit>=3.5.0",
    "pytest>=8.3.4",
    "pytest-cov>=5.0.0",
    "ruff>=0.9.4",
]
