[project]
name = "useful_decorators"
authors = [
    {name="ed cuss"},
]
description = ""
readme = "README.md"
requires-python = ">=3.8"
version = "0.0.1"
dependencies = [
    "attrs>=25.1.0",
    "returns>=0.21.0",
]

[tool.coverage.run]
branch = true
source=["src"]
omit=[
    "constants.py",
]

[tool.coverage.report]
show_missing=true

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pre-commit>=3.5.0",
    "pytest>=8.3.4",
    "pytest-cov>=5.0.0",
    "ruff>=0.9.4",
    "scalene>=1.5.51",
]
